Fixed bug when showing too much thumbnails in detail view when close to the end.

--- a/tiny-gallery-js/css/tgjs.less
+++ b/tiny-gallery-js/css/tgjs.less
@@ -201,6 +201,7 @@ a.tg-control-page-active {
   flex-flow: row;
   width: 100%;
   height: 20vh;
+  overflow: hidden;
 }
 
 .tg-detail-thumb {
